# PlanetProfile

./: .buildinfo  .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  BuildTest.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChondriteLL_Stx11.ext  ConvectionDeschampsSotin2001.m  CorePlot.py  CoreSizePlot.py  Ice_convection.mat  LICENSE  MANIFEST.in  MantlePlot.py  MantleSizePlot.py  MatToPy.py  PPTest.m  PPtest.m  PlanetProfile.m  PlanetProfile.py  PlanetProfileCLI.py  PlanetaryProfile.m  PythonReload.m  QUICKSTART_BUILD.md  README.md  Seismic.py  TitanProfile_Clathrates_MgSO4_10WtPct_Zb58km_Zclath5km.taup  Tm_p_Hirschmann2000.m  VARIABLE_REFERENCES.md  clath_convection.mat  collect_V2018.run  collect_defaults.run  compare.run  compareV2018.run  config.m  config.py  genindex.html  getLarionov1984MgSO4Conductivities.m  (+18 more)
.doctrees/: environment.pickle  index.doctree  pythonModules.doctree  readme.doctree
Ariel/: PPAriel.m  PPAriel.py
Callisto/: .gitignore  CallistoMagParamSpaceDice50km.mat  CallistoProfile_MgSO40WtPct.mat  CallistoProfile_MgSO40WtPctVels.mat  CallistoProfile_MgSO40WtPctZb100km.txt  CallistoProfile_MgSO40WtPctZb100kmCMR2_p32.txt  CallistoProfile_MgSO40WtPctZb120km.txt  CallistoProfile_MgSO40WtPctZb120kmCMR2_p32.txt  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle100km.txt  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle111km.txt  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle112km  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle120km.txt  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle26km.txt  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle27km  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle59km  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle59km.txt  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle5km  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle5km.txt  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle87km.txt  CallistoProfile_MgSO40WtPctZbLowVUpper30kmMantle88km  CallistoProfile_MgSO410WtPct.mat  CallistoProfile_MgSO410WtPctVels.mat  CallistoProfile_MgSO410WtPctZb100km.txt  CallistoProfile_MgSO410WtPctZb100kmCMR2_p32.txt  CallistoProfile_MgSO410WtPctZb130km.txt  CallistoProfile_MgSO410WtPctZb130kmCMR2_p32.txt  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle100km.txt  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle103km.txt  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle104km  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle115km.txt  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle117km  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle118km.txt  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle130km.txt  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle22km  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle52km.txt  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle53km  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle79km.txt  CallistoProfile_MgSO410WtPctZbLowVUpper30kmMantle80km  CallistoProfile_MgSO410WtPct_.mat  CallistoProfile_MgSO410WtPct_Ts110Zb130337mQm2mWm2_CMR2p3549_pyrohp_sat_678_1.txt  (+18 more)
Comparison/: .gitignore  collect_V2018.run  compare.run
Enceladus/: .gitignore  EnceladusProfile_MgSO40WtPct.mat  EnceladusProfile_MgSO40WtPctVels.mat  EnceladusProfile_MgSO40WtPctZbLowVUpper30kmMantle48km.txt  EnceladusProfile_MgSO40WtPctZbLowVUpper30kmMantle53km.txt  EnceladusProfile_MgSO410WtPct.mat  EnceladusProfile_MgSO410WtPctVels.mat  EnceladusProfile_MgSO410WtPctZb10km (LMC-060917's conflicted copy 2017-08-01).txt  EnceladusProfile_MgSO410WtPctZb10km.txt  EnceladusProfile_MgSO410WtPctZb50km (LMC-060917's conflicted copy 2017-08-01).txt  EnceladusProfile_MgSO410WtPctZbLowVUpper30kmMantle10km.txt  EnceladusProfile_MgSO410WtPctZbLowVUpper30kmMantle11km.txt  EnceladusProfile_MgSO410WtPctZbLowVUpper30kmMantle12km.txt  EnceladusProfile_MgSO410WtPctZbLowVUpper30kmMantle13km.txt  (+71 more)
(+1305 files in other folders)
