[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PlanetProfile"
version = "3.0.0"
authors = [
    {name = "Marshall J. Styczinski", email = "itsmoosh@gmail.com"},
]
description = "Self-consistent geophysical models for large moons and ocean worlds"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.24.4",
    "scipy >= 1.11.4",
    "mpmath >= 1.3.0",
    "matplotlib >= 3.8.4",
    "SeaFreeze >= 0.9.6",
    "MoonMag >= 1.7.5",
    "gsw >= 3.6.16",
    "spiceypy >= 6.0.0",
    "cmasher >= 1.6.3",
    "hdf5storage >= 0.1.19",
    "reaktoro >= 2.12.5",
    "pyalma3 >= 1.0.1",
]

[project.urls]
Homepage = "https://github.com/vancesteven/PlanetProfile"
"Bug Tracker" = "https://github.com/vancesteven/PlanetProfile/issues"
Publication = "https://doi.org/10.1029/2022EA002748"
Documentation = "https://vancesteven.github.io/PlanetProfile"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["PlanetProfile*"]
exclude = ["docs*", "tests*", "*.tests*", "*.tests"]
